--- a/src/profi/templates/payloads/revshell-linux-python3-short.yaml
+++ b/src/profi/templates/payloads/revshell-linux-python3-short.yaml
@@ -1,6 +1,6 @@
 metadata:
   filename: "revshell-linux-python3-short.yaml"
-  tags: ["shell", "linux"]
+  tags: ["shell", "linux", "python"]
   created: "2025-03-29"
   author: "Unknown"
 
