--- a/src/profi/templates/payloads/xss-blind-img-onerror-include-script-download-insert-head.yaml
+++ b/src/profi/templates/payloads/xss-blind-img-onerror-include-script-download-insert-head.yaml
@@ -1,6 +1,6 @@
 metadata:
   filename: "xss-blind-img-onerror-include-script-download-insert-head.yaml"
-  tags: ["web"]
+  tags: ["web", "xss"]
   created: "2025-03-29"
   author: "Unknown"
 
