--- a/src/profi/templates/payloads/xss-hyperlink-mouseover-poc-alert.yaml
+++ b/src/profi/templates/payloads/xss-hyperlink-mouseover-poc-alert.yaml
@@ -1,6 +1,6 @@
 metadata:
   filename: "xss-hyperlink-mouseover-poc-alert.yaml"
-  tags: ["web"]
+  tags: ["web", "xss"]
   created: "2025-03-29"
   author: "Unknown"
 
