--- a/src/profi/templates/payloads/special-characters.yaml
+++ b/src/profi/templates/payloads/special-characters.yaml
@@ -1,7 +1,7 @@
 ---
 metadata:
   filename: "special-characters.yaml"
-  tags: []
+  tags: ["wordlist"]
   created: "2025-03-29"
   author: "Unknown"
 
