feat: added some more tags to templates and updated README

--- a/src/profi/templates/payloads/generate-uuid-v4-number-only.yaml
+++ b/src/profi/templates/payloads/generate-uuid-v4-number-only.yaml
@@ -1,7 +1,7 @@
 ---
 metadata:
   filename: "generate-uuid-v4-number-only.yaml"
-  tags: []
+  tags: ["utils"]
   created: "2025-03-29"
   author: "Unknown"
 
