Feat/tag updates (#43)
* feat: added some tags to templates

* added "wordlist" tag to some templates
* introduced new "utils" tag for utility scripts
* added default color for "utils" to base config

* feat: added some more tags to templates and updated README

* fix: updated missing quotes in README

--- a/src/profi/templates/payloads/generate-random-number.yaml
+++ b/src/profi/templates/payloads/generate-random-number.yaml
@@ -1,9 +1,9 @@
 ---
 metadata:
   filename: "generate-random-number.yaml"
-  tags: []
+  tags: ["utils"]
   created: "2025-03-29"
   author: "Unknown"
 
 content: |
-  <%=$(echo"$(random)$(random)")%>
+  <%=$(echo "$(random)$(random)")%>
