--- a/src/profi/templates/payloads/revshell-linux-extended-encoded-url.sh.yaml
+++ b/src/profi/templates/payloads/revshell-linux-extended-encoded-url.sh.yaml
@@ -1,7 +1,7 @@
 ---
 metadata:
   filename: "revshell-linux-extended-encoded-url.sh.yaml"
-  tags: [shell", linux"]
+  tags: ["shell", "linux"]
   created: "2025-03-29"
   author: "Unknown"
 
