--- a/src/profi/templates/payloads/revshell-linux-python3-env.yaml
+++ b/src/profi/templates/payloads/revshell-linux-python3-env.yaml
@@ -1,7 +1,7 @@
 ---
 metadata:
   filename: "revshell-linux-python3-env.yaml"
-  tags: ["shell", "linux", "python"]
+  tags: ["shell", "linux"]
   created: "2025-03-29"
   author: "Unknown"
 
