--- a/src/profi/templates/payloads/ssti-polyglot.yaml
+++ b/src/profi/templates/payloads/ssti-polyglot.yaml
@@ -1,9 +1,9 @@
+---
 metadata:
-  filename: ssti-polyglot.yaml
-  tags:
-  - web
-  created: '2025-03-29'
-  author: '@anakles'
-content: '{% raw %}${{\<\%[%''"}}%\
+  filename: "ssti-polyglot.yaml"
+  tags: ["web"]
+  created: "2025-03-29"
+  author: "@anakles"
 
-  {% endraw %}'
+content: |
+  {% raw %}${{\<\%[%'"}}%\{% endraw %}
