--- a/src/profi/templates/payloads/prompt-prettify-colored-linux-bash.yaml
+++ b/src/profi/templates/payloads/prompt-prettify-colored-linux-bash.yaml
@@ -1,9 +1,9 @@
 ---
 metadata:
-  filename: prompt-prettify-colored-linux-bash.yaml
+  filename: "prompt-prettify-colored-linux-bash.yaml"
   tags: ["linux"]
   created: "2025-03-29"
-  author: Unknown
+  author: "Unknown"
 
 content: |
   {% raw %}export PS1='\[\033[0;31m\][BASH]\[\033[0m\]\[\033[1;34m\]\[\033[1m\][\u@\h \[\033[1;37m\]\w]\[\033[0m\]-\[\033[0;35m\][\D{%F %T}]\[\033[0m\]\n\$ '{% endraw %}
